--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^3.4.7",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "^1.15.0",
+    "@react-native-picker/picker": "1.9.11",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.0",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
     "json-server": "^0.16.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
