--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.0",
+    "expo-calendar": "~9.1.2",
+    "expo-mail-composer": "~10.1.2",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "json-server": "^0.16.3",
